force-app/main/default/objects/Opportunity/Opportunity.object-meta.xml
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>