force-app/main/default/objects/Opportunity/fields/Installment_purchase__c.field-meta.xml
<CustomField>
    <fullName>Installment_purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installment purchase</label>
    <type>Checkbox</type>
</CustomField>