force-app/main/default/objects/Opportunity/fields/Type_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Payment__c</fullName>
    <label>Type Of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>